tests/ui/cve_2019_16138/cve_2019_16138.stderr
error: it violates the precondition of `Vec::set_len` to extend a `Vec`'s length without initializing its content in advance
  --> tests/ui/cve_2019_16138/cve_2019_16138.rs:6:13
   |
LL |     let mut ret: Vec<(u8, u8, u8)> = Vec::with_capacity(pixel_count);
   |                                      ------------------------------- `Vec` created here
LL |     unsafe {
LL |         ret.set_len(pixel_count);
   |             ^^^^^^^^^^^^^^^^^^^^ `Vec::set_len` called here
   |
   = help: before calling `set_len` to extend its length, make sure all elements are initialized, using such as `spare_capacity_mut` or `as_mut_ptr`
   = note: `#[deny(rpl::set_len_uninitialized)]` on by default

error: it violates the precondition of `Vec::set_len` to extend a `Vec`'s length without initializing its content in advance
  --> tests/ui/cve_2019_16138/cve_2019_16138.rs:12:5
   |
LL |     foo()
   |     ^^^^^
   |     |
   |     `Vec::set_len` called here
   |     `Vec` created here
   |
   = help: before calling `set_len` to extend its length, make sure all elements are initialized, using such as `spare_capacity_mut` or `as_mut_ptr`

error: aborting due to 2 previous errors

